challenge-2/prod-web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
  creationTimestamp: "2024-03-23T22:11:09Z"
  generation: 3
  labels:
    name: prod-web
  name: prod-web
  namespace: prod
  resourceVersion: "75982"
  uid: ce0d8bf0-306e-4620-9f42-139beffa06c9
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: prod-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: prod-web
      name: dev-web
    spec:
      containers:
      - env:
        - name: DB_Host
          valueFrom:
            secretKeyRef:
              key: DB_Host
              name: prod-db
        - name: DB_User
          valueFrom:
            secretKeyRef:
              key: DB_User
              name: prod-db
        - name: DB_Password
          valueFrom:
            secretKeyRef:
              key: DB_Password
              name: prod-db
        image: mmumshad/simple-webapp-mysql
        imagePullPolicy: Always
        name: webapp-mysql
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - all
          readOnlyRootFilesystem: true
          runAsUser: 10001
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
